# goodreads-genres-api

./: Cargo.toml  Dockerfile  README.md  compose.yml
docker/: dev.Dockerfile
src/: main.rs  parse.rs  tests.rs  types.rs  wget.rs
